# STLAutomaton

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: STLAutomaton.cpp  STLAutomaton.hpp
